# objinspect

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  python-publish.yml  tests.yml
docs/: index.md
docs/reference/: class.md  function.md  inspect.md  method.md  parameter.md  pdir.md  typing.md  util.md
interfacy_core/: __init__.py  constants.py  exceptions.py  interfacy_class.py  interfacy_func.py  interfacy_param.py  util.py
objinspect/: __init__.py  _class.py  constants.py  function.py  method.py  method_extractor.py  parameter.py  prettydir.py  typing.py  util.py
py_inspect/: __init__.py  _class.py  function.py  parameter.py  util.py
tests/: examples.py  test_class.py  test_extractor.py  test_function.py  test_inspect.py  test_method.py  test_objinspect.py  test_typing.py  test_utils.py
