[project]
name = "objinspect"
version = "0.2.11"
description = "A high-level library for Python object inspection"
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "docstring-parser>=0.16.0",
  "stdl==0.5.2",
  "typing-extensions>=4.7.1",
]

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
  "objinspect",
  "object inspection",
  "code introspection",
  "python inspect",
  "pretty dir",
  "debugging",
  "development-tools",
  "code-analysis",
  "function-signature",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "ruff",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-autorefs",
  "mkdocstrings[python]",
]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/zigai/objinspect"
Documentation = "https://objinspect.readthedocs.io"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ['py310']

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
